Analizador/parser.output
Terminals unused in grammar

   LINE_BREAK


Grammar

    0 $accept: S $end

    1 S: l_commands

    2 l_commands: command l_commands
    3           | command

    4 command: MK_DISK l_params
    5        | RM_DISK l_params
    6        | F_DISK l_params
    7        | MOUNT l_params
    8        | UNMOUNT l_params
    9        | PAUSE
   10        | REP l_params
   11        | MK_FS l_params
   12        | LOGIN l_params
   13        | LOGOUT
   14        | MK_GRP l_params
   15        | RM_GRP l_params
   16        | MK_USR l_params
   17        | RM_USR l_params
   18        | CHMOD l_params
   19        | MK_FILE l_params
   20        | CAT l_params
   21        | REM l_params
   22        | EDIT l_params
   23        | REN l_params
   24        | MK_DIR l_params
   25        | CP l_params
   26        | MV l_params
   27        | FIND l_params
   28        | CHOWN l_params
   29        | CHGRP l_params

   30 l_params: param l_params
   31         | param

   32 param: SIZE EQUALS INTEGER
   33      | PATH EQUALS TEXT
   34      | NAME EQUALS TEXT
   35      | UNIT EQUALS UNIT_TYPE
   36      | FIT EQUALS FIT_TYPE
   37      | TYPE EQUALS _type
   38      | DELETE EQUALS DELETE_TYPE
   39      | ADD EQUALS INTEGER
   40      | ID EQUALS TEXT
   41      | USR EQUALS TEXT
   42      | PWD EQUALS INTEGER
   43      | PWD EQUALS TEXT
   44      | GRP EQUALS TEXT
   45      | UGO EQUALS INTEGER
   46      | R
   47      | P
   48      | CONT EQUALS TEXT
   49      | _FILE EQUALS TEXT
   50      | DEST EQUALS TEXT
   51      | RUTA EQUALS TEXT

   52 _type: DELETE_TYPE
   53      | PART_TYPE


Terminals, with rules where they appear

$end (0) 0
error (256)
MK_DISK (258) 4
SIZE (259) 32
PATH (260) 33
UNIT (261) 35
FIT (262) 36
NAME (263) 34
RM_DISK (264) 5
F_DISK (265) 6
TYPE (266) 37
DELETE (267) 38
ADD (268) 39
MOUNT (269) 7
UNMOUNT (270) 8
PAUSE (271) 9
REP (272) 10
ID (273) 40
RUTA (274) 51
MK_FS (275) 11
LOGIN (276) 12
MK_GRP (277) 14
RM_GRP (278) 15
MK_USR (279) 16
RM_USR (280) 17
CHMOD (281) 18
MK_FILE (282) 19
CAT (283) 20
REM (284) 21
EDIT (285) 22
REN (286) 23
MK_DIR (287) 24
CP (288) 25
MV (289) 26
FIND (290) 27
CHOWN (291) 28
CHGRP (292) 29
USR (293) 41
PWD (294) 42 43
GRP (295) 44
UGO (296) 45
R (297) 46
P (298) 47
CONT (299) 48
_FILE (300) 49
DEST (301) 50
LOGOUT (302) 13
EQUALS (303) 32 33 34 35 36 37 38 39 40 41 42 43 44 45 48 49 50 51
LINE_BREAK (304)
INTEGER (305) 32 39 42 45
TEXT (306) 33 34 40 41 43 44 48 49 50 51
PART_TYPE (307) 53
UNIT_TYPE (308) 35
FIT_TYPE (309) 36
DELETE_TYPE (310) 38 52


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
S (57)
    on left: 1, on right: 0
l_commands (58)
    on left: 2 3, on right: 1 2
command (59)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29, on right: 2 3
l_params (60)
    on left: 30 31, on right: 4 5 6 7 8 10 11 12 14 15 16 17 18 19
    20 21 22 23 24 25 26 27 28 29 30
param (61)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51, on right: 30 31
_type (62)
    on left: 52 53, on right: 37


State 0

    0 $accept: . S $end

    MK_DISK  shift, and go to state 1
    RM_DISK  shift, and go to state 2
    F_DISK   shift, and go to state 3
    MOUNT    shift, and go to state 4
    UNMOUNT  shift, and go to state 5
    PAUSE    shift, and go to state 6
    REP      shift, and go to state 7
    MK_FS    shift, and go to state 8
    LOGIN    shift, and go to state 9
    MK_GRP   shift, and go to state 10
    RM_GRP   shift, and go to state 11
    MK_USR   shift, and go to state 12
    RM_USR   shift, and go to state 13
    CHMOD    shift, and go to state 14
    MK_FILE  shift, and go to state 15
    CAT      shift, and go to state 16
    REM      shift, and go to state 17
    EDIT     shift, and go to state 18
    REN      shift, and go to state 19
    MK_DIR   shift, and go to state 20
    CP       shift, and go to state 21
    MV       shift, and go to state 22
    FIND     shift, and go to state 23
    CHOWN    shift, and go to state 24
    CHGRP    shift, and go to state 25
    LOGOUT   shift, and go to state 26

    S           go to state 27
    l_commands  go to state 28
    command     go to state 29


State 1

    4 command: MK_DISK . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 49
    param     go to state 50


State 2

    5 command: RM_DISK . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 51
    param     go to state 50


State 3

    6 command: F_DISK . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 52
    param     go to state 50


State 4

    7 command: MOUNT . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 53
    param     go to state 50


State 5

    8 command: UNMOUNT . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 54
    param     go to state 50


State 6

    9 command: PAUSE .

    $default  reduce using rule 9 (command)


State 7

   10 command: REP . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 55
    param     go to state 50


State 8

   11 command: MK_FS . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 56
    param     go to state 50


State 9

   12 command: LOGIN . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 57
    param     go to state 50


State 10

   14 command: MK_GRP . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 58
    param     go to state 50


State 11

   15 command: RM_GRP . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 59
    param     go to state 50


State 12

   16 command: MK_USR . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 60
    param     go to state 50


State 13

   17 command: RM_USR . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 61
    param     go to state 50


State 14

   18 command: CHMOD . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 62
    param     go to state 50


State 15

   19 command: MK_FILE . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 63
    param     go to state 50


State 16

   20 command: CAT . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 64
    param     go to state 50


State 17

   21 command: REM . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 65
    param     go to state 50


State 18

   22 command: EDIT . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 66
    param     go to state 50


State 19

   23 command: REN . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 67
    param     go to state 50


State 20

   24 command: MK_DIR . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 68
    param     go to state 50


State 21

   25 command: CP . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 69
    param     go to state 50


State 22

   26 command: MV . l_params

    SIZE    shift, and go to state 30
    PATH    shift, and go to state 31
    UNIT    shift, and go to state 32
    FIT     shift, and go to state 33
    NAME    shift, and go to state 34
    TYPE    shift, and go to state 35
    DELETE  shift, and go to state 36
    ADD     shift, and go to state 37
    ID      shift, and go to state 38
    RUTA    shift, and go to state 39
    USR     shift, and go to state 40
    PWD     shift, and go to state 41
    GRP     shift, and go to state 42
    UGO     shift, and go to state 43
    R       shift, and go to state 44
    P       shift, and go to state 45
    CONT    shift, and go to state 46
    _FILE   shift, and go to state 47
    DEST    shift, and go to state 48

    l_params  go to state 70
    param     go to state 50


State 23

   27 command: FIND . l_params
